# Parallel-Decision-Tree-Learning-on-Heterogeneous-CPU-GPU-Systems

./: .gitignore  MILESTONE2_REPORT.md  MILESTONE3_REPORT.md  README.md  changed.md  parallel-decision-tree.md  requirements.txt
decision-tree/: CMakeLists.txt  build_cuda.bat  build_cuda_log.txt
decision-tree/data/: breast_cancer.csv  synthetic.csv  wine.csv
decision-tree/eval/: download_datasets.py  metrics.h  sklearn_compare.py
decision-tree/results/: ensemble_timing.csv  levelwise_timing.csv  split_timing.csv
decision-tree/scripts/: benchmark_m2.py  benchmark_m3.py  download_datasets.py  run_m3_report_benchmarks.py
decision-tree/src/: data_loader.h  main.cpp
decision-tree/src/gpu/: infer_kernel.cu  infer_kernel.cuh  split_kernel.cu  split_kernel.cuh
decision-tree/src/tree/: decision_tree.cpp  decision_tree.h  node.h  random_forest.cpp  random_forest.h
